k8s/mainfest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app
spec:
  selector:
    app: go-web-app
  ports:
    - protocol: TCP
      port: 80  # It is the port on the service which will be used to map the application in the deployment
      targetPort: 8080 # It is the port which is being exposed by the application in the conatainer
      # NodePort => It is basically a physical port on the host/node.
      # The physical port is mapped with the service port which in turn is mapped with the container or application port 
  type: ClusterIP
